// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildkite-graph Steps Command Conditional dependencies can be specified dot 1`] = `
"digraph \\"x\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<a>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<b>\\" [ color = \\"grey\\" ];
}

  \\"[object Object]\\";
  \\"<b>\\";
  \\"[object Object]\\" -> \\"<b>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "b",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified multiple times as dependency dot 1`] = `
"digraph \\"x\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<a>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<b>\\" [ color = \\"grey\\" ];
  \\"<c>\\" [ color = \\"grey\\" ];
}

  \\"[object Object]\\";
  \\"<b>\\";
  \\"<c>\\";
  \\"[object Object]\\" -> \\"<b>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"[object Object]\\" -> \\"<c>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified multiple times as dependency json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "b",
    },
    Object {
      "command": "c",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified multiple times as dependency structure 1`] = `
"* <a>
* [wait]
* <b>
* <c>"
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified multiple times as dependency yaml 1`] = `
"steps:
  - command: a
  - wait: ~
  - command: b
  - command: c
"
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified structure 1`] = `
"* <a>
* [wait]
* <b>"
`;

exports[`buildkite-graph Steps Command Conditional dependencies can be specified yaml 1`] = `
"steps:
  - command: a
  - wait: ~
  - command: b
"
`;

exports[`buildkite-graph Steps Command async step addition dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command async step addition dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
}
"
`;

exports[`buildkite-graph Steps Command async step addition json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command async step addition json 2`] = `
Object {
  "steps": Array [],
}
`;

exports[`buildkite-graph Steps Command async step addition structure 1`] = `"* <yarn && yarn test>"`;

exports[`buildkite-graph Steps Command async step addition structure 2`] = `""`;

exports[`buildkite-graph Steps Command async step addition yaml 1`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command async step addition yaml 2`] = `
"steps: []
"
`;

exports[`buildkite-graph Steps Command async step creation dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command async step creation dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command async step creation json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command async step creation json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command async step creation structure 1`] = `"* <yarn && yarn test>"`;

exports[`buildkite-graph Steps Command async step creation structure 2`] = `"* <yarn && yarn test>"`;

exports[`buildkite-graph Steps Command async step creation yaml 1`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command async step creation yaml 2`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command isEffectOf dependsOn is used after isEffectOf structure 1`] = `""`;

exports[`buildkite-graph Steps Command isEffectOf effects and conditionals have correct depends_on yaml_depends_on 1`] = `
"steps:
  - key: build
    command: build app
  - key: deploy
    depends_on:
      - step: build
    command: deploy app
  - key: ssr-tests
    depends_on:
      - step: build
    command: ssr tests
"
`;

exports[`buildkite-graph Steps Command isEffectOf effects of effects will be added if first effect dependency is accepted structure 1`] = `
"* <run tests>
* [wait]
* <create coverage>
* [wait]
* <deploy coverage>"
`;

exports[`buildkite-graph Steps Command isEffectOf effects of effects will not be added if first effect dependency is rejected structure 1`] = `""`;

exports[`buildkite-graph Steps Command isEffectOf effects of steps that are becoming part of the graph are exercised structure 1`] = `
"* <build app>
* [wait]
* <run integration tests>
* <deploy app>"
`;

exports[`buildkite-graph Steps Command isEffectOf last call wins structure 1`] = `
"* <run tests>
* [wait]
* <deploy coverage>"
`;

exports[`buildkite-graph Steps Command isEffectOf last call wins structure 2`] = `""`;

exports[`buildkite-graph Steps Command isEffectOf later steps affect earlier effects structure 1`] = `
"* <build app>
* [wait]
* <deploy app>
* [wait]
* <release app>
* <run integration tests>"
`;

exports[`buildkite-graph Steps Command isEffectOf will add steps if acceptAllConditions is set even if effect dependency is rejected json_depends_on_accept_all 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "run tests",
      "key": "_0",
    },
    Object {
      "command": "deploy coverage",
      "depends_on": Array [
        Object {
          "step": "_0",
        },
      ],
      "key": "_1",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command isEffectOf will add steps if acceptAllConditions is set even if effect dependency is rejected yaml_depends_on_accept_all 1`] = `
"steps:
  - key: _0
    command: run tests
  - key: _1
    depends_on:
      - step: _0
    command: deploy coverage
"
`;

exports[`buildkite-graph Steps Command isEffectOf will add steps if their effect dependency is accepted structure 1`] = `
"* <run tests>
* [wait]
* <deploy coverage>"
`;

exports[`buildkite-graph Steps Command isEffectOf will not add steps if any effect dependency is rejected structure 1`] = `"* <run tests 1>"`;

exports[`buildkite-graph Steps Command isEffectOf will not add steps if effect dependency is rejected structure 1`] = `""`;

exports[`buildkite-graph Steps Command step addition dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command step addition dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command step addition dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
}
"
`;

exports[`buildkite-graph Steps Command step addition json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition json 3`] = `
Object {
  "steps": Array [],
}
`;

exports[`buildkite-graph Steps Command step addition structure 1`] = `"* <yarn && yarn test>"`;

exports[`buildkite-graph Steps Command step addition structure 2`] = `"* <yarn && yarn test>"`;

exports[`buildkite-graph Steps Command step addition structure 3`] = `""`;

exports[`buildkite-graph Steps Command step addition yaml 1`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command step addition yaml 2`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command step addition yaml 3`] = `
"steps: []
"
`;
